add paralax and aos

--- a/forkafest.html
+++ b/forkafest.html
@@ -384,7 +384,7 @@
     </svg>
   </main>
   <script src="script.js"></script>
-  <script type="text/javascript" src="model.js"></script>
+  <script type="text/javascript" src="assets/js/countdown.js"></script>
 </body>
 
 
