--- a/prestasi.html
+++ b/prestasi.html
@@ -94,7 +94,7 @@
         }
       }
     </style>
-    <section class="about"
+    <section class="about" data-bss-parallax-bg="true"
       style="background-color: #f8f8f8 !important; background-image: url(assets/img/bgg/pres.JPG); width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; color: #fff;">
       <div class="container-fluid" style="height: 100vh;">
         <div class="img-c">
@@ -430,6 +430,7 @@
       </div>
     </div>
   </footer>
+  <script src="assets/js/parallax.js"></script>
   <script src="script.js"></script>
 
 </body>
