--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="img-c">
                 <img src="assets/img/bgg/unj.jpg" alt="Coffee">
               </div>
-              <div class="content aos">
+              <div class="content">
                 <div class="col-md-6"
                   style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
                   <div>
