isi index + logo

--- a/forkafest.html
+++ b/forkafest.html
@@ -51,7 +51,7 @@
   <!-- NAVBAR -->
   <nav class="navbar" style="z-index: 999;">
     <div class="logo" style="margin-right: 30px;">
-      <a href="#">Your Logo</a>
+      <img src="assets/img/teknik.png" style="height: 30px; width: 30px;">
     </div>
     <ul class="nav-links">
       <li><a href="index.html" style="color: #0d47a1;">Beranda</a></li>
@@ -446,6 +446,7 @@
     </div>
   </footer>
   <script src="script.js"></script>
+  <script src="model.js"></script>
   <script type="text/javascript" src="assets/js/countdown.js"></script>
 </body>
 
