--- a/prestasi.html
+++ b/prestasi.html
@@ -45,7 +45,7 @@
   <!-- NAVBAR -->
   <nav class="navbar" style="z-index: 999;">
     <div class="logo" style="margin-right: 30px;">
-      <a href="#">Your Logo</a>
+      <img src="assets/img/teknik.png" style="height: 30px; width: 30px;">
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Beranda</a></li>
