--- a/forkafest.html
+++ b/forkafest.html
@@ -383,7 +383,7 @@
         class="transition-all duration-300 ease-in-out delay-150 path-2" transform="rotate(-180 720 200)"></path>
     </svg>
   </main>
-   <!-- foter -->
+   <!-- footer -->
   <footer style="background-color: #0d47a1; margin-top: -5px; padding: 20px; color: #f8f8f8;">
     <div class="container-fluid">
       <div class="row" style="display: flex; justify-content: space-between; align-items: end; flex-direction: row;">
@@ -445,6 +445,7 @@
       </div>
     </div>
   </footer>
+  <!-- footer end -->
   <script src="script.js"></script>
   <script src="model.js"></script>
   <script type="text/javascript" src="assets/js/countdown.js"></script>
