--- a/profil.html
+++ b/profil.html
@@ -126,7 +126,7 @@
       <div class="container"
         style="min-height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column;">
         <div class="row">
-          <h2 style="color: #f8f8f8; padding: 50px;">Deskripsi singkat</h2>
+          <h2 style="color: #f8f8f8; padding: 50px;">Program Studi Teknik Informatika</h2>
         </div>
         <div class="row">
           <div class="col-md-6"
@@ -135,12 +135,10 @@
           </div>
           <div class="col-md-6"
             style="display: flex; justify-content: center; align-items: center; flex-direction: column; padding: 20px;">
-            <p class="desc" style="color: #f8f8f8;">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span style="color: #FFB703;">Asperiores iste officia magni, a </span> excepturi minima facilis, doloribus deleniti blanditiis reprehenderit quisquam nostrum vero! Facere
-              accusamus dolorum in voluptatem eveniet sequi. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Sequi dolore facilis mollitia delectus, <span style="color: #FFB703;">excepturi totam nobis unde sit consectetur numquam reiciendis, </span>
-              voluptas temporibus laudantium explicabo repellat, molestiae incidunt! Illo, quia? Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Accusamus, voluptatum blanditiis minima molestiae ducimus natus omnis
-              autem alias facilis nobis provident doloribus suscipit aspernatur tempore beatae a rerum. Nobis, voluptas.
+            <p class="desc" style="color: #f8f8f8;">Dalam program studi teknik informatika Universitas Muhammadiyah Jember, 
+              Anda akan mengalami pendidikan yang tidak hanya berfokus pada ilmu pengetahuan, tetapi juga menerapkan nilai-nilai
+              keislaman guna membentuk karakter yang religius, profesional, dan kompetitif. Kami menyediakan fasilitas belajar
+              yang mendukung dan lingkungan yang kondusif untuk mengembangkan potensi Anda.
             </p>
           </div>
         </div>
